SUBDIRS = src data conf opset hdb compressors icdecoder_plugins \
scripts manual cost_estimator_plugins explorer doc tools

SUBDIRS += scheduler 
SUBDIRS += bclib 
SUBDIRS += newlib-1.17.0/tce-llvm 
SUBDIRS += newlib-1.17.0/tcele-llvm 
SUBDIRS += newlib-1.17.0/tcele64-llvm

RISCV_SUB_DIRS = newlib-1.17.0/riscv-llvm

AUTOMAKE_OPTIONS = foreign

# Include files from directory m4/
ACLOCAL_AMFLAGS = -I m4

if MANUALS
MAKEMANUALS = true
else
MAKEMANUALS = false
endif

bin_SCRIPTS = openasip-config

# Note: as newlib makefiles do not support 'dist' have to include
# the whole newlib-1.17.0 dir here.
EXTRA_DIST = README-AUTOTOOLS CHANGES INSTALL LICENSE.txt gen_llvm_shared_lib.sh \
		tools/Doxygen/doxygen.config \
		tools/patches \
		newlib-1.17.0 \
		TROUBLESHOOTING distro autogen.sh

dist-hook:
	@(sed '/INPUT[[:space:]]*=/ s,\(.*\)=\(.*\) test\($$\| .*\),\1=\2\3,g' \
	tools/Doxygen/doxygen.config > \
	$(distdir)/tools/Doxygen/doxygen.config)

include_HEADERS = tce_config.h

.PHONY: doc linecount

# build documentation
doc:
	@(cd doc && ${MAKE})

linecount:
	@./tools/scripts/codeinfo.php

# when cleaning, clean also test tree and some newlib files which
# are not cleaned up by its 'make clean'
clean-local:
	@(${MAKE} -C test clean)
	rm -f newlib-1.17.0/tcele-llvm/tcele-llvm/newlib/libg.a \
	newlib-1.17.0/tce-llvm/tce-llvm/newlib/libg.a \
	newlib-1.17.0/tcele64-llvm/tcele64-llvm/newlib/libg.a \
	newlib-1.17.0/riscv-llvm/riscv/newlib/libg.a

## ensure distclean deletes also the manuals generated by Doxygen
distclean-local:
	@(rm -fr doc/man/html)

dev-install: install
	@./tools/scripts/install_all_headers ${prefix}

all-local:
	+cd src/bintools/Compiler && ./oacc-riscv --generate-plugin --tce-build-mode
	@for dir in $(RISCV_SUB_DIRS); do \
		$(MAKE) -C $$dir || exit 1; \
	done
	ln -sf ./openasip-config ./tce-config
	cd src/bintools/Compiler;  ln -sf oacc tcecc
	cd scripts;  ln -sf oa-selftest tce-selftest

install-exec-hook:
	cd $(prefix)/bin;  ln -sf openasip-config tce-config
	cd $(prefix)/bin;  ln -sf oacc tcecc
	cd $(prefix)/bin;  ln -sf oa-selftest tce-selftest
