SUBDIRS = bitmaps

datadir = ${prefix}/share/openasip/data

nobase_data_DATA =	$(srcdir)/ProDe/confschema.xsd \
					$(srcdir)/bem/BEM_Schema.xsd \
					$(srcdir)/mach/ADF_Schema.xsd \
					$(srcdir)/mach/minimal.adf \
					$(srcdir)/mach/minimal_be.adf \
					$(srcdir)/mach/minimal_with_stdout.adf \
					$(srcdir)/mach/rv32im.adf \
					$(srcdir)/osal/Operation_Schema.xsd \
					$(srcdir)/idf/IDF_Schema.xsd \
					$(srcdir)/OSEd/behavior_definition_template.cc \
					$(srcdir)/ProGe/tce_util_pkg.vhdl \
					$(srcdir)/ProGe/tce_util_pkg.vh \
					$(srcdir)/ProGe/*.tmpl \
					$(srcdir)/icons/*.png \
					$(srcdir)/ProGe/tb/*.vhdl \
					$(srcdir)/ProGe/tb/*.vhdl.tmpl \
					$(srcdir)/ProGe/tb/*.v \
					$(srcdir)/ProGe/tb/*.v.tmpl \
					$(srcdir)/ProGe/tb/almaif/*.vhdl \
					$(srcdir)/ProGe/tb/almaif/*.vhdl.tmpl \
					$(srcdir)/ProGe/platform/*.vhd \
					$(srcdir)/ProGe/platform/*.vhdl \
					$(srcdir)/ProGe/platform/*.vhdl.tmpl \
					$(srcdir)/ProGe/platform/*.snippet \
					$(srcdir)/ProGe/synthesis/*.tcl.tmpl \
					$(srcdir)/ProGe/synthesis/*.py \
					$(srcdir)/Proxim/confschema.xsd \
					$(srcdir)/hdb/*.vhdl.template \
					$(srcdir)/tcecc/oclc_launcher_header.c \
					$(srcdir)/tcecc/oclc_launcher_single.c \
					$(srcdir)/tcecc/oclc_initializer_object.cc  \
					$(srcdir)/ProGe/tb/simulate.sh.tmpl \
					$(srcdir)/ProGe/tb/compile.sh.tmpl \
					$(srcdir)/ProGe/debugger/*.vhdl \
					$(srcdir)/ProGe/debugger/*.vhdl.tmpl \
					$(srcdir)/ProGe/*.snippet \
					$(srcdir)/ProGe/debugger/tb/*.vhdl \
					$(srcdir)/riscv/* \
					$(srcdir)/RFGen/vhdl/*.vhdl \
					$(srcdir)/RFGen/verilog/*.v


EXTRA_DIST = ${nobase_data_DATA}
