basedir = ${prefix}/share/tce/hdb
nobase_base_DATA = $(srcdir)/asic_130nm_1.5V.hdb \
                   $(srcdir)/vhdl/fu/* \
                   $(srcdir)/vhdl/rf/* \
                   $(srcdir)/vhdl/pkg/* \
                   $(srcdir)/stratixII.hdb \
                   $(srcdir)/stratixII_vhdl/fpga_lsu/* \
                   $(srcdir)/stratixII_vhdl/led_io/* \
                   $(srcdir)/stratixII_vhdl/rtc/* \
                   $(srcdir)/stratixII_vhdl/sram_lsu/*

EXTRA_DIST = ${nobase_base_DATA}
