basedir = ${prefix}/share/tce/hdb
nobase_base_DATA = $(srcdir)/asic_130nm_1.5V.hdb \
                   $(srcdir)/vhdl/fu/* \
                   $(srcdir)/vhdl/rf/* \
                   $(srcdir)/vhdl/pkg/* \
                   $(srcdir)/stratixII.hdb \
                   $(srcdir)/stratixII_vhdl/fpga_lsu/* \
                   $(srcdir)/stratixII_vhdl/led_io/* \
                   $(srcdir)/stratixII_vhdl/rtc/* \
                   $(srcdir)/stratixII_vhdl/sram_lsu/* \
                   $(srcdir)/avalon.hdb \
                   $(srcdir)/avalon_hdb_vhdl/* \
                   $(srcdir)/hibi_adapter.hdb \
                   $(srcdir)/hibi_adapter_vhdl/* \
                   $(srcdir)/stream.hdb \
                   $(srcdir)/stream_vhdl/* \
                   $(srcdir)/fpu_embedded.hdb \
                   $(srcdir)/fpu_embedded_vhdl/* \
                   $(srcdir)/sabrewing/* \
                   $(srcdir)/fpu_half.hdb \
                   $(srcdir)/fpu_half_vhdl/* \
                   $(srcdir)/altera_jtag_uart.hdb \
                   $(srcdir)/altera_jtag_uart_vhdl/* \
                   $(srcdir)/stratixIII.hdb \
                   $(srcdir)/stratixIII_vhdl/fpga_lsu/* \
                   $(srcdir)/stratixIII_vhdl/led_io/* \
                   $(srcdir)/stratixIII_vhdl/pushbutton/* \
                   $(srcdir)/stratixIII_vhdl/rtc/* \
                   $(srcdir)/stratixIII_vhdl/switch/*

EXTRA_DIST = ${nobase_base_DATA}
